--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@
   width: 580px;
 }
 
+button {
+  outline: none;
+}
+
 .button {
   z-index: 3;
   position: relative;
@@ -34,11 +38,9 @@
   border-radius: 50%;
   background: transparent;
   border-color: transparent;
+  animation-name: shrink;
+  animation-duration: 0.3s;
 }
-
-.button:focus {
-  outline: none;
-} 
 
 .placeMarker {
   z-index: 2;
@@ -67,4 +69,44 @@
 @keyframes grow {
   0% {transform: scale(0, 0);}
   100% {transform: scale(1, 1);}
+}
+
+@keyframes shrink {
+  0% {transform: scale(1, 1);}
+  100% {transform: scale(0, 0);}
+}
+
+#menu {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+#menu > button, #rules {
+  padding: 3px;
+  margin: 5px;
+  background: white;
+  border: none;
+  font-size: 1.5rem;
+}
+
+#menu > button:hover, #rules:hover {
+  border: 2px solid black;
+  margin: 3px;
+}
+
+#scoreboard {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#scoreboard > h4 {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+#rules {
+
 }
