--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@
   margin-left: -288px;
   top: 0;
   width: 580px;
+  height: 580px;
+}
+
+#playContainer {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  position: relative;
+  margin: 2px 2px -1px 2px;
 }
 
 button {
@@ -30,16 +39,13 @@ button {
 }
 
 .button {
-  z-index: 3;
-  position: relative;
-  width: 30px;
-  height: 30px;
-  margin: 2px;
+  z-index: 4;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background: transparent;
   border-color: transparent;
-  animation-name: shrink;
-  animation-duration: 0.3s;
 }
 
 .placeMarker {
@@ -53,17 +59,29 @@ button {
 }
 
 .black, .white {
-  animation-name: grow;
   animation-duration: 0.3s;
+  animation-name: shrink;
+  animation-fill-mode: forwards;
+  z-index: 3;
+  position: absolute;
+  border-radius: 50%;
 }
 
 .black {
 	background: black;
+  width: 100%;
+  height: 100%;
 }
 
 .white {
 	background: white;
 	border: 2px solid black;
+  width: 26px;
+  height: 26px;
+}
+
+.grow {
+  animation-name: grow;
 }
 
 @keyframes grow {
@@ -82,7 +100,7 @@ button {
   font-weight: bold;
 }
 
-#menu > button, #rules {
+#menu > button, #rules > button{
   padding: 3px;
   margin: 5px;
   background: white;
@@ -90,7 +108,7 @@ button {
   font-size: 1.5rem;
 }
 
-#menu > button:hover, #rules:hover {
+#menu > button:hover, #rules > button:hover {
   border: 2px solid black;
   margin: 3px;
 }
@@ -106,7 +124,7 @@ button {
   margin-left: 50px;
   margin-right: 50px;
 }
-
+  text-align: center;
 #rules {
 
 }
