two-player mode

--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,14 @@ button {
 #rules {
   text-align: center;
 }
+
+.info-board {
+  display: flex;
+  flex-direction: column;
+}
+
+.info-board > div {
+  display: flex;
+  width: 200px;
+  justify-content: space-between;
+}
